--- a/includes/style.css
+++ b/includes/style.css
@@ -292,3 +292,14 @@ a {
     background: rgba(238, 228, 218, 0.95);
   }
 }
+
+@media screen and (max-width: 480px) {
+  html, body {
+    margin: 0;
+    padding: 0;
+    background: #fff;
+    color: #313D47;
+    font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
+    font-size: 18px;
+  }
+}
