--- a/includes/style.css
+++ b/includes/style.css
@@ -9,19 +9,11 @@ html, body {
   font-size: 18px;
 }
 
-body {
-  margin: 60px 0;
-}
+body { margin: 60px 0; }
 
 .container {
   width: 760px;
   margin: 0 auto;
-}
-
-.heading:after {
-  content: "";
-  display: block;
-  clear: both;
 }
 
 h1.title {
@@ -39,6 +31,12 @@ a {
   color: #ffffff;
   text-decoration: none;
   cursor: pointer;
+}
+
+.heading:after {
+  content: "";
+  display: block;
+  clear: both;
 }
 
 .badge {
@@ -65,7 +63,6 @@ a {
   color: #f9f6f2;
   height: 40px;
   line-height: 42px;
-
   text-align: center;
   width: 500px;
 }
@@ -78,177 +75,164 @@ a {
   width: 746px;
   height: 486px;
   background: #408DD2;
-
   position: relative;
 }
+  .program-back {
+    position: absolute;
+    border-radius: 5px;
+  }
+    .program-back-invalid { border: 2px solid rgba(255, 200, 200, 1); }
+    .program-back-valid   { border: 2px solid rgba(200, 255, 200, 1); }
+      .program-back-invalid .tagline { background: rgba(255, 200, 200, 1); }
+      .program-back-valid   .tagline { background: rgba(200, 255, 200, 1); }
 
-.grid-container {
-  position: absolute;
-}
+    .program-back .tagline { display: none; }
+    .program-back:hover .tagline { display:block; }
+      .program-back .tagline .badge { float:right; }
+  .grid-container { position: absolute; }
+    .grid-row { margin-bottom: 5px; }
+      .grid-row:last-child { margin-bottom: 0; }
+      .grid-row:after {
+        content: "";
+        display: block;
+        clear: both;
+      }
 
-.program-drawer {
-  width: 255px;
-  height: 486px;
-  border-radius: 5px;
-  float: right;
-  position: relative;
+      .grid-cell {
+        margin-right: 5px;
+        width: 30px;
+        height: 30px;
+        background: rgba(238, 228, 218, 0.35);
+        border-radius: 5px;
+        float: left;
+      }
+        .grid-cell:last-child { margin-right: 0; }
+          .grid-cell.hover-active { background: #60D6a9; }
+          .grid-cell.hover-inactive { background: none; }
+        .grid-cell-active-flip {
+          background: rgba(238, 228, 218, 0.95);
+          -webkit-animation: fillActive 200ms;
+          -moz-animation: fillActive 200ms;
+          -webkit-animation-fill-mode: both;
+          -moz-animation-fill-mode: both;
+          -webkit-animation-direction: alternate;
+          -moz-animation-direction: alternate;
+        }
+        .grid-cell-active-fade {
+          background: rgba(238, 228, 218, 0.95);
+          -webkit-animation: fadeActive 100ms;
+          -moz-animation: fadeActive 100ms;
+          -webkit-animation-fill-mode: both;
+          -moz-animation-fill-mode: both;
+          -webkit-animation-direction: alternate;
+          -moz-animation-direction: alternate;
+        }
+        .grid-cell-inactive-flip {
+          background: rgba(238, 228, 218, 0.35);
+          -webkit-animation: fillActive 200ms reverse;
+          -moz-animation: fillActive 200ms reverse;
+          -webkit-animation-fill-mode: both;
+          -moz-animation-fill-mode: both;
+          -webkit-animation-play-state: running;
+          -webkit-animation-delay: 0s;
+        }
+        .grid-cell-inactive-fade {
+          background: rgba(238, 228, 218, 0.35);
+          -webkit-animation: fadeActive 100ms reverse;
+          -moz-animation: fadeActive 100ms reverse;
+          -webkit-animation-fill-mode: both;
+          -moz-animation-fill-mode: both;
+          -webkit-animation-play-state: running;
+          -webkit-animation-delay: 0s;
+        }
+        .grid-cell-new {
+          -webkit-animation: appear 200ms ease 100ms;
+          -moz-animation: appear 200ms ease 100ms;
+          -webkit-animation-fill-mode: both;
+          -moz-animation-fill-mode: both;
+        }
+        .grid-cell-die {
+          -webkit-animation: disappear 200ms ease 100ms;
+          -moz-animation: disappear 200ms ease 100ms;
+          -webkit-animation-fill-mode: both;
+          -moz-animation-fill-mode: both;
+        }
+  .program-drawer {
+    width: 255px;
+    height: 486px;
+    border-radius: 5px;
+    float: right;
+    position: relative;
+    overflow-y: scroll;
+    overflow-x: hidden;
+  }
+    .program-drawer ul {
+      list-style-type: none;
+      padding: 0;
+      margin: 0;
+    }
+      .program-drawer .run-button {
+        background: #60D6a9;
+        font-size: 32px;
+        text-align: center;
+        line-height: 80px;
+      }
+      .program-drawer li {
+        width: 235px;
+        height: 80px;
+        margin-bottom: 5px;
+        border-radius: 5px;
+        background: rgba(238, 228, 218, 0.35);
+        padding: 10px;
+      }
+        .program-drawer li:last-child { margin: 0; }
+        .program-drawer li.selected { background: rgba(238, 228, 218, 0.75); }
+          .program-drawer li.selected .grid-picture { background: rgba(0, 0, 0, 0.4); }
 
-  overflow-y: scroll;
-  overflow-x: hidden;
-}
+        .program-drawer li .title {
+          font-weight: bold;
+          font-size: 22px;
+        }
+        .program-drawer li .description {
+          font-weight: bold;
+          font-size: 16px;
+        }
+        .program-drawer li .grid-picture {
+          float: left;
+          width: 69px;
+          height: 69px;
+          background: rgba(0, 0, 0, 0.2);
+          border-radius: 3px;
+          margin-right: 5px;
+          padding: 5px;
+        }
+          .program-drawer li .grid-picture .grid-row { margin-bottom: 1px; }
+            .program-drawer li .grid-picture .grid-row:last-child { margin-bottom: 0; }
+          .program-drawer li .grid-picture .grid-cell {
+            border-radius: 2px;
+            margin-right: 1px;
+          }
+            .program-drawer li .grid-picture .grid-cell:last-child { margin-right: 0; }
+          .program-drawer li .grid-picture-3x3 .grid-row { height: 22px; }
+            .program-drawer li .grid-picture-3x3 .grid-cell {
+              width: 22px;
+              height: 100%;
+            }
+          .program-drawer li .grid-picture-4x4 .grid-row { height: 16px; }
+            .program-drawer li .grid-picture-4x4 .grid-cell {
+              width: 16px;
+              height: 100%;
+            }
+          .program-drawer li .grid-picture-5x5 .grid-row { height: 13px; }
+            .program-drawer li .grid-picture-5x5 .grid-cell {
+              width: 13px;
+              height: 100%;
+            }
 
-.program-drawer ul {
-  list-style-type: none;
-
-  padding: 0;
-  margin: 0;
-}
-
-.program-drawer li {
-  width: 235px;
-  height: 80px;
-  margin-bottom: 5px;
-  border-radius: 5px;
-
-  background: rgba(238, 228, 218, 0.35);
-
-  padding: 10px;
-}
-
-.program-drawer li.selected {
-  background: rgba(238, 228, 218, 0.75);
-}
-
-.program-drawer li.selected .grid-picture {
-  background: rgba(0, 0, 0, 0.4);
-}
-
-.program-drawer li:last-child {
-  margin: 0;
-}
-
-.program .grid-picture {
-  float: left;
-  width: 69px;
-  height: 69px;
-  background: rgba(0, 0, 0, 0.2);
-  border-radius: 3px;
-  margin-right: 5px;
-  padding: 5px;
-}
-
-.grid-picture .grid-cell {
-  border-radius: 2px;
-  margin-right: 1px;
-}
-
-.grid-picture .grid-cell:last-child {
-  margin-right: 0;
-}
-
-.grid-picture .grid-row {
-  margin-bottom: 1px;
-}
-
-.grid-picture .grid-row:last-child {
-  margin-bottom: 0;
-}
-
-.grid-picture-3x3 .grid-cell {
-  width: 22px;
-  height: 100%;
-}
-
-.grid-picture-3x3 .grid-row {
-  height: 22px;
-}
-
-.grid-picture-4x4 .grid-row:first-child,
-.grid-picture-3x3 .grid-row:first-child {
-  margin-top: 1px;
-}
-
-.grid-picture-4x4 .grid-cell:first-child,
-.grid-picture-3x3 .grid-cell:first-child {
-  margin-left: 1px;
-}
-
-.grid-picture-4x4 .grid-cell {
-  width: 16px;
-  height: 100%;
-}
-
-.grid-picture-4x4 .grid-row {
-  height: 16px;
-}
-
-.grid-picture-5x5 .grid-cell {
-  width: 13px;
-  height: 100%;
-}
-
-.grid-picture-5x5 .grid-row {
-  height: 13px;
-}
-
-.program .title {
-  font-weight: bold;
-  font-size: 22px;
-}
-
-.program .description {
-  font-weight: bold;
-  font-size: 16px;
-}
-
-.grid-row {
-  margin-bottom: 5px;
-}
-
-.grid-row:after {
-  content: "";
-  display: block;
-  clear: both;
-}
-
-.grid-row:last-child {
-  margin-bottom: 0;
-}
-
-.grid-cell {
-  margin-right: 5px;
-  width: 30px;
-  height: 30px;
-  background: rgba(238, 228, 218, 0.35);
-  border-radius: 5px;
-  float: left;
-}
-
-.grid-cell.hover-active {
-  background: #60D6a9;
-}
-
-.grid-cell.hover-inactive {
-  background: none;
-}
-
-.grid-cell.no-hover {
-  -webkit-animation: appear 200ms ease 100ms;
-  -moz-animation: appear 200ms ease 100ms;
-  -webkit-animation-fill-mode: both;
-  -moz-animation-fill-mode: both;
-}
-
-.grid-cell:last-child {
-  margin-right: 0;
-}
-
-.grid-cell-new {
-  -webkit-animation: appear 200ms ease 100ms;
-  -moz-animation: appear 200ms ease 100ms;
-  -webkit-animation-fill-mode: both;
-  -moz-animation-fill-mode: both;
-}
+          .program-drawer li .grid-picture-4x4 .grid-row:first-child,
+          .program-drawer li .grid-picture-3x3 .grid-row:first-child { margin-top: 1px; }
+          .program-drawer li .grid-picture-4x4 .grid-cell:first-child,
+          .program-drawer li .grid-picture-3x3 .grid-cell:first-child { margin-left: 1px; }
 
 @-webkit-keyframes appear {
   0% {
@@ -256,58 +240,35 @@ a {
     -webkit-transform: scale(0);
     -moz-transform: scale(0);
   }
-
   100% {
     opacity: 1;
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
   }
 }
-
 @-moz-keyframes appear {
   0% {
     opacity: 0;
     -webkit-transform: scale(0);
     -moz-transform: scale(0);
   }
-
   100% {
     opacity: 1;
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
   }
 }
-
 @keyframes appear {
   0% {
     opacity: 0;
     -webkit-transform: scale(0);
     -moz-transform: scale(0);
   }
-
   100% {
     opacity: 1;
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
   }
-}
-
-.grid-cell-active-flip {
-  -webkit-animation: fillActive 200ms;
-  -moz-animation: fillActive 200ms;
-  -webkit-animation-fill-mode: both;
-  -moz-animation-fill-mode: both;
-  -webkit-animation-direction: alternate;
-  -moz-animation-direction: alternate;
-}
-
-.grid-cell-inactive-flip {
-  -webkit-animation: fillActive 200ms reverse;
-  -moz-animation: fillActive 200ms reverse;
-  -webkit-animation-fill-mode: both;
-  -moz-animation-fill-mode: both;
-  -webkit-animation-play-state: running;
-  -webkit-animation-delay: 0s;
 }
 
 @-webkit-keyframes fillActive {
@@ -315,19 +276,16 @@ a {
     -webkit-transform: scaleX(1);
     -moz-transform: scaleX(1);
   }
-
   50% {
     -webkit-transform: scaleX(0);
     -moz-transform: scaleX(0);
     background: rgba(238, 228, 218, 0.35);
   }
-
   51% {
     -webkit-transform: scaleX(0);
     -moz-transform: scaleX(0);
     background: rgba(238, 228, 218, 0.95);
   }
-
   100% {
     opacity: 1;
     -webkit-transform: scaleX(1);
@@ -335,26 +293,22 @@ a {
     background: rgba(238, 228, 218, 0.95);
   }
 }
-
 @-moz-keyframes fillActive {
   0% {
     -webkit-transform: scaleX(1);
     -moz-transform: scaleX(1);
     background: rgba(238, 228, 218, 0.35);
   }
-
   50% {
     -webkit-transform: scaleX(0);
     -moz-transform: scaleX(0);
     background: rgba(238, 228, 218, 0.35);
   }
-
   51% {
     -webkit-transform: scaleX(0);
     -moz-transform: scaleX(0);
     background: rgba(238, 228, 218, 0.95);
   }
-
   100% {
     opacity: 1;
     -webkit-transform: scaleX(1);
@@ -362,26 +316,22 @@ a {
     background: rgba(238, 228, 218, 0.95);
   }
 }
-
 @keyframes fillActive {
   0% {
     -webkit-transform: scaleX(1);
     -moz-transform: scaleX(1);
     background: rgba(238, 228, 218, 0.35);
   }
-
   50% {
     -webkit-transform: scaleX(0);
     -moz-transform: scaleX(0);
     background: rgba(238, 228, 218, 0.35);
   }
-
   51% {
     -webkit-transform: scaleX(0);
     -moz-transform: scaleX(0);
     background: rgba(238, 228, 218, 0.95);
   }
-
   100% {
     opacity: 1;
     -webkit-transform: scaleX(1);
@@ -390,51 +340,65 @@ a {
   }
 }
 
-.grid-cell-active-fade {
-  -webkit-animation: fadeActive 100ms;
-  -moz-animation: fadeActive 100ms;
-  -webkit-animation-fill-mode: both;
-  -moz-animation-fill-mode: both;
-  -webkit-animation-direction: alternate;
-  -moz-animation-direction: alternate;
-}
-
-.grid-cell-inactive-fade {
-  -webkit-animation: fadeActive 100ms reverse;
-  -moz-animation: fadeActive 100ms reverse;
-  -webkit-animation-fill-mode: both;
-  -moz-animation-fill-mode: both;
-  -webkit-animation-play-state: running;
-  -webkit-animation-delay: 0s;
-}
-
 @-webkit-keyframes fadeActive {
   0% {
     background: rgba(238, 228, 218, 0.35);
   }
-
   100% {
     background: rgba(238, 228, 218, 0.95);
   }
 }
-
 @-moz-keyframes fadeActive {
   0% {
     background: rgba(238, 228, 218, 0.35);
   }
-
+  100% {
+    background: rgba(238, 228, 218, 0.95);
+  }
+}
+@keyframes fadeActive {
+  0% {
+    background: rgba(238, 228, 218, 0.35);
+  }
   100% {
     background: rgba(238, 228, 218, 0.95);
   }
 }
 
-@keyframes fadeActive {
+@-webkit-keyframes disappear {
   0% {
-    background: rgba(238, 228, 218, 0.35);
+    opacity: 1;
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
   }
-
   100% {
-    background: rgba(238, 228, 218, 0.95);
+    opacity: 0;
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+  }
+}
+@-moz-keyframes disappear {
+  0% {
+    opacity: 1;
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+  }
+}
+@keyframes disappear {
+  0% {
+    opacity: 1;
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
   }
 }
 
@@ -447,36 +411,4 @@ a {
     font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
     font-size: 18px;
   }
-}
-
-.program-back {
-  position: absolute;
-  border-radius: 5px;
-}
-
-.program-back-invalid {
-  border: 2px solid rgba(255, 200, 200, 1);
-}
-
-.program-back-invalid .tagline {
-  background: rgba(255, 200, 200, 1);
-  display:none;
-}
-
-.program-back-valid {
-  border: 2px solid rgba(200, 255, 200, 1);
-  border-radius: 5px;
-}
-
-.program-back-valid .tagline {
-  background: rgba(200, 255, 200, 1);
-  display:none;
-}
-
-.program-back:hover .tagline {
-  display:block;
-}
-
-.tagline .badge {
-  float:right;
 }
