--- a/includes/style.css
+++ b/includes/style.css
@@ -19,6 +19,7 @@ body { margin: 60px 0; }
 h1.title {
   font-size: 72px;
   float: left;
+  margin-bottom: 0;
 }
 
 p {
@@ -68,6 +69,7 @@ a {
 }
 
 .game-container {
+  margin: 0 auto;
   margin-top: 2px;
   padding: 7px;
   border-radius: 5px;
