--- a/includes/style.css
+++ b/includes/style.css
@@ -466,7 +466,7 @@ a {
   right: 0;
   bottom: 0;
   left: 0;
-  background: rgba(238, 228, 218, 0.73);
+  background: rgba(238, 228, 218, 0.90);
   z-index: 100;
   text-align: center;
   -webkit-animation: fade-in 800ms ease 1200ms;
@@ -476,12 +476,15 @@ a {
   -moz-animation-fill-mode: both;
   animation-fill-mode: both;
 }
-  .game-message p {
+  .game-message .title {
     font-size: 60px;
     font-weight: bold;
     height: 60px;
     line-height: 60px;
     margin-top: 222px;
+  }
+  .game-message p {
+    font-size: 20px;
   }
   .game-message a {
     display: inline-block;
