--- a/includes/style.css
+++ b/includes/style.css
@@ -83,7 +83,10 @@ a {
     position: absolute;
     border-radius: 5px;
   }
-    .program-back-invalid { border: 2px solid rgba(255, 200, 200, 1); }
+    .program-back-invalid {
+      border: 2px solid rgba(255, 200, 200, 1);
+      background: rgba(255, 200, 200, 0.5);
+    }
     .program-back-valid   { border: 2px solid rgba(200, 255, 200, 1); }
       .program-back-invalid .tagline { background: rgba(255, 200, 200, 1); }
       .program-back-valid   .tagline { background: rgba(200, 255, 200, 1); }
@@ -114,8 +117,8 @@ a {
       .shooter-grid-container .grid-cell:last-child { margin-left: 0 }
 
   .shooter-tile-container {
-    width: 727px;
-    height: 295px;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
     position: absolute;
   }
@@ -126,12 +129,6 @@ a {
       line-height: 25px;
       text-align: center;
       margin: 0;
-      /*-webkit-transition: 100ms ease-in-out;*/
-      /*-moz-transition: 100ms ease-in-out;*/
-      /*transition: 100ms ease-in-out;*/
-      /*-webkit-transition-property: -webkit-transform;*/
-      /*-moz-transition-property: -moz-transform;*/
-      /*transition-property: transform;*/
     }
     .shooter-tile-container .player-ship { background: #FFBD00; }
     .shooter-tile-container .basic-enemy-ship { background: #FF0000; }
@@ -141,15 +138,20 @@ a {
       height: 8px;
       background: #FF0000;
     }
-    .shooter-tile-container .king-corrupter-ship {
+    .shooter-tile-container .large-enemy-ship {
       background: none;
     }
+      .shooter-tile-container .tank-enemy-ship .tile {
+        position: static;
+        background: #9999FF;
+        margin: 1px;
+      }
       .shooter-tile-container .king-corrupter-ship .tile {
         position: static;
         background: #FFBD00;
         margin: 1px;
       }
-      .shooter-tile-container .king-corrupter-ship .tile.none { background: none; }
+      .shooter-tile-container .large-enemy-ship .tile.none { background: none; }
   .grid-container { position: absolute; }
     .grid-row { margin-bottom: 5px; }
       .grid-row:last-child { margin-bottom: 0; }
@@ -216,10 +218,10 @@ a {
         .grid-cell-corrupted { position: relative; }
           .grid-cell-corrupted.corrupt-1 {
             left: -20px;
-            top: -35px;
+            top: -15px;
           }
           .grid-cell-corrupted.corrupt-2 {
-            left: -35px;
+            left: -15px;
             top: -10px;
           }
           .grid-cell-corrupted.corrupt-3 {
